--- a/scaffold/package.json
+++ b/scaffold/package.json
@@ -2,6 +2,6 @@
 	"private": true,
 	"dependencies": {
 		"grunt": "~0.4.5",
-		"grunt-library-builder": "CloudKidStudio/grunt-library-builder"
+		"grunt-library-builder": "*"
 	}
 }
