Added more themes, replace concat with concat-sourcemap

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "grunt-library-builder",
-	"version": "0.1.2",
+	"version": "0.2.0",
 	"description": "Tasks and scaffolding for a library project",
 	"main": "./libs/index.js",
 	"author": {
@@ -21,12 +21,12 @@
 		"grunt-contrib-uglify": "~0.5.0",
 		"grunt-contrib-clean": "~0.5.0",
 		"grunt-contrib-watch": "~0.6.1",
-		"grunt-contrib-concat": "~0.5.0",
 		"grunt-text-replace": "~0.3.12",
 		"load-grunt-config": "~0.13.0",
 		"grunt-contrib-yuidoc": "~0.5.2",
 		"grunt-gh-pages": "~0.9.1",
 		"underscore-contrib": "~0.3.0",
+		"grunt-concat-sourcemap": "~0.4.3",
 		"prompt": "~0.2.13"
 	},
 	"keywords": [
